Project "Laravel E-Commerce" {
  database_type: 'PostgreSQL'
  Note: 'Standard Laravel E-Commerce ERD'
}

Table users {
  id int [pk, increment]
  role_id int
  name varchar
  email varchar [unique]
  email_verified_at timestamp
  password varchar
  remember_token varchar
  created_at timestamp
  updated_at timestamp
}

Table roles {
  id int [pk, increment]
  name varchar
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id int [pk, increment]
  name varchar
  slug varchar [unique]
  description text
  created_at timestamp
  updated_at timestamp
}

Table products {
  id int [pk, increment]
  category_id int
  name varchar
  slug varchar [unique]
  description text
  price decimal
  stock int
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id int [pk, increment]
  user_id int
  rider_id int [null]
  status varchar
  total_amount decimal
  shipping_address text
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id int [pk, increment]
  order_id int
  product_id int
  quantity int
  price decimal
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id int [pk, increment]
  user_id int
  product_id int
  quantity int
  created_at timestamp
  updated_at timestamp
}

Table wishlists {
  id int [pk, increment]
  user_id int
  product_id int
  created_at timestamp
  updated_at timestamp
}

Table conversations {
  id int [pk, increment]
  user_one_id int
  user_two_id int
  created_at timestamp
  updated_at timestamp
}

Table messages {
  id int [pk, increment]
  conversation_id int
  sender_id int
  body text
  is_read boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

Table store_settings {
  id int [pk, increment]
  key varchar [unique]
  value text
  created_at timestamp
  updated_at timestamp
}

Table riders {
  id int [pk, increment]
  user_id int
  vehicle_details varchar
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Ref: users.role_id > roles.id
Ref: products.category_id > categories.id
Ref: orders.user_id > users.id
Ref: orders.rider_id > riders.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: cart_items.user_id > users.id
Ref: cart_items.product_id > products.id
Ref: wishlists.user_id > users.id
Ref: wishlists.product_id > products.id
Ref: conversations.user_one_id > users.id
Ref: conversations.user_two_id > users.id
Ref: messages.conversation_id > conversations.id
Ref: messages.sender_id > users.id
Ref: riders.user_id - users.id
